[gd_scene load_steps=13 format=3 uid="uid://cpyib23l6r8wp"]

[ext_resource type="Script" uid="uid://ckmk2fo0wjo0l" path="res://scripts/items/bomb.gd" id="1_f6s3l"]
[ext_resource type="AudioStream" uid="uid://c1bqc86ug6idl" path="res://assets/sounds/sfx/sfx_bombexplode.mp3" id="2_vqx86"]
[ext_resource type="Script" uid="uid://c5kt54b5ifjks" path="res://scripts/components/basic_animation_component.gd" id="3_wf4gu"]
[ext_resource type="Script" uid="uid://c6vk2sunyguf3" path="res://scripts/components/trip_component.gd" id="4_8lipt"]

[sub_resource type="SphereMesh" id="SphereMesh_so8qk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pnt74"]
albedo_color = Color(0.747437, 0.3471, 0.195822, 1)

[sub_resource type="SphereMesh" id="SphereMesh_joq7p"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tlk1f"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_3m2gw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_04qsb"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_j1jhg"]

[sub_resource type="SphereShape3D" id="SphereShape3D_cp6ia"]

[node name="Bomb" type="RigidBody3D"]
script = ExtResource("1_f6s3l")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Explosion" type="MeshInstance3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
visible = false
mesh = SubResource("SphereMesh_so8qk")
surface_material_override/0 = SubResource("StandardMaterial3D_pnt74")

[node name="BombMesh" type="Node3D" parent="."]

[node name="Bomb" type="MeshInstance3D" parent="BombMesh"]
mesh = SubResource("SphereMesh_joq7p")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_tlk1f")

[node name="Fuse" type="MeshInstance3D" parent="BombMesh"]
transform = Transform3D(0.1, 0, 0, 0, 0.5, 0, 0, 0, 0.1, 0, 0.2, 0)
mesh = SubResource("CylinderMesh_3m2gw")
surface_material_override/0 = SubResource("StandardMaterial3D_04qsb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_j1jhg")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_vqx86")
bus = &"SFX"

[node name="AnimationComponent" type="Node3D" parent="."]
script = ExtResource("3_wf4gu")
THROWN_FORWARD = false

[node name="TripComponent" type="Area3D" parent="."]
script = ExtResource("4_8lipt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TripComponent"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
shape = SubResource("SphereShape3D_cp6ia")
disabled = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="TripComponent" to="TripComponent" method="_on_body_entered"]
